# ai-workforce-saas

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: __init__.py  main.py
app/agents/: base.py  orchestrator.py  support_agent.py
app/agents/ops/: __init__.py  agent.py  prompts.py
app/agents/sales/: __init__.py  agent.py  prompts.py
app/agents/support/: __init__.py  agent.py  prompts.py
app/api/: routes.py
app/core/: config.py
app/db/: models.py  session.py
app/schemas/: chat.py
app/services/: redis_service.py
app/static/: chat-old.css  chat.css  chat.js  styles.css
app/templates/: chat.html  dashboard.html
tests/: test_chat_routing.py  test_health.py
